--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -1,17 +1,30 @@
 {
-    "selectTorque": {
-        "header": "Angi moment",
-        "desc": "Fyll inn moment for å vise tilgjengelige verktøy.",
-        "unit": "NM"
-    },
-
-    "selectTool": {
-        "header": "Velg verktøy",
-        "desc": "Liste over tilgjengelige verktøy med gitt moment."
-    },
-
-    "selectSize": {
-        "header": "Velg størrelse",
-        "desc": "Velg verktøystørrelse for å vise resultat."
+    "steps": {
+        "selectTorque": {
+            "stepTitle": "Select torque",
+            "torque": "Torque", 
+            "torqueUnit": "NM",
+            "numberValidationError": "Value must be a number",
+            "continue": "Continue"
+        },
+        "selectTool": {
+            "stepTitle": "Select tool",
+            "changeTorque": "Change torque"
+        },
+        "selectModel": {
+            "stepTitle": "Select model",
+            "noMatches": "No matching models found",
+            "changeTool": "Change tool"
+        },
+        "result": {
+            "stepTitle": "Recommended pump pressure",
+            "resultDescription": "Applies for {{tool}} {{model}} with a torque of {{ torque }} {{ unit }}",
+            "recommendedPumpPressure": "Recommended pump pressure",
+            "pumpPressureUnit": "PSI",
+            "disclaimerTitle": "Be careful!",
+            "disclaimerText": "Although we try our very best to keep the information in this tool as accurate as possible, we cannot guarantee that errors of either a techincal or human nature might occour. Information obtained in this tool is only meant as a guiding indication, and you should always double-check before using it out in the field.",
+            "changeModel": "Change model",
+            "restart": "Restart"
+        }
     }
 }
